--- a/index.html
+++ b/index.html
@@ -1,43 +1,31 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>This is my website</title>
-	<link rel="stylesheet" href="william.css">
-</head>
-<body>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Feedback Submission</title>
+  </head>
+  <body>
+    <h1>Please use this webpage to give me feedback on my lesson</h1>
+    <form action="https://formspree.io/dashanWilliam@hotmail.com" method="POST" />
+      <h3>How much did you understand?</h3>
+      <input type="radio" name="understand" value="1">1
+      <input type="radio" name="understand" value="2">2
+      <input type="radio" name="understand" value="3" checked>3
+      <input type="radio" name="understand" value="4">4
+      <input type="radio" name="understand" value="5">5
+      <br>
+      <h3>How interesting did you find the lesson?</h3>
+      <input type="radio" name="interest" value="1">1
+      <input type="radio" name="interest" value="2">2
+      <input type="radio" name="interest" value="3" checked>3
+      <input type="radio" name="interest" value="4">4
+      <input type="radio" name="interest" value="5">5
+      <br>
+      <h3>Anything else you would like to say? (This is anonymous, I won't know who you are)</h3>
+      <input type="text" name="textbox">
 
-	<h1>William's Website</h1>
-	<h2>What I did today</h2>
-	<p>Today I went to the <strong>store</strong>. I bought an <em>apple</em>, some meat, two bananas, and a computer.</p>
 
-	<h2>Lists</h2>
-	<ol>
-		<li>apples</li>
-		<li>soap</li>
-		<li>rice</li>
-		<li>paper</li>
-	</ol>
-
-	<h2>My favorite foods</h2>
-	<dl>
-		<dt>apples</dt>
-		<dd>I like apples because they are sweet</dd>
-		<dt>bananas</dt>
-		<dd>they are easy to eat</dd>
-		<dt>chicken</dt>
-		<dd></dd>
-	</dl>
-
-	<audio controls>
-		<source src="hi.mp3" type="audio/mpeg">
-	Your browser does not support the audio element.
-	</audio>
-
-	<video controls>
-		<source src="computer.mp4" type="video/mp4">
-	</video>
-
-	<img src="lebron.png" alt="This is a picture of Lebron James" width="200" height="700">
-
-</body>
+      <input type="submit" value="Submit">
+    </form>
+  </body>
 </html>
