--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
 
     <div class="form-group">
-    <form action="http://trapserver.gq/process.php" method="POST" />
+      <form accept-charset="UTF-8" action="https://usebasin.com/f/d7bac18c85f9" method="POST">
       <div class="column col-12">
         <label class="form-label">How much did you understand?</label>
         <label class="form-radio form-inline">
