--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
     <div class="column col-sm-">
       <h1>Feedback for William's lesson</h1>
       <p>Please use this form to tell me how I did with my demo class. I will give everyone some candy if at least 90% of you give me feedback.</p>
+      <h2>You might need to be connected to wifi in order to submit. It seems to not work with cellular data.</h2>
     </div>
+      
 
     <div class="form-group">
       <form accept-charset="UTF-8" action="https://usebasin.com/f/d7bac18c85f9" method="POST">
