--- a/index.html
+++ b/index.html
@@ -1,156 +1,43 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="HandheldFriendly" content="true">
-    <meta charset="utf-8">
-    <title>Feedback Submission</title>
-    <link rel="stylesheet" href="css/spectre.min.css">
-    <link rel="stylesheet" href="css/spectre-exp.min.css">
-    <link rel="stylesheet" href="css/spectre-icons.min.css">
-    <link rel="stylesheet" href="css/index.css">
-  </head>
+<html>
+<head>
+	<title>This is my website</title>
+	<link rel="stylesheet" href="william.css">
+</head>
+<body>
 
-  <body>
-    <header class="navbar">
-      <section class="navbar-section">
+	<h1>William's Website</h1>
+	<h2>What I did today</h2>
+	<p>Today I went to the <strong>store</strong>. I bought an <em>apple</em>, some meat, two bananas, and a computer.</p>
 
-      </section>
-      <section class="navbar-center">
-        <i class="icon icon-2x icon-message"></i>
-      </section>
-      <section class="navbar-section">
+	<h2>Lists</h2>
+	<ol>
+		<li>apples</li>
+		<li>soap</li>
+		<li>rice</li>
+		<li>paper</li>
+	</ol>
 
-      </section>
-    </header>
+	<h2>My favorite foods</h2>
+	<dl>
+		<dt>apples</dt>
+		<dd>I like apples because they are sweet</dd>
+		<dt>bananas</dt>
+		<dd>they are easy to eat</dd>
+		<dt>chicken</dt>
+		<dd></dd>
+	</dl>
 
+	<audio controls>
+		<source src="hi.mp3" type="audio/mpeg">
+	Your browser does not support the audio element.
+	</audio>
 
-    <div class="container grid-md">
-    <div class="column col-sm-">
-      <h1>Feedback for William's lesson</h1>
-      <p>Please use this form to tell me how I did with my demo class. I will give everyone some candy if at least 90% of you give me feedback.</p>
-      <h2>You might need to be connected to wifi in order to submit. It seems to not work with cellular data.</h2>
-    </div>
-      
+	<video controls>
+		<source src="computer.mp4" type="video/mp4">
+	</video>
 
-    <div class="form-group">
-      <form accept-charset="UTF-8" action="https://usebasin.com/f/d7bac18c85f9" method="POST">
-      <div class="column col-12">
-        <label class="form-label">How much did you understand?</label>
-        <label class="form-radio form-inline">
-          <input type="radio" name="understand" value="1"><i class="form-icon"></i>1
-        </label>
-        <label class="form-radio form-inline">
-          <input type="radio" name="understand" value="2"><i class="form-icon"></i>2
-        </label>
-        <label class="form-radio form-inline">
-          <input type="radio" name="understand" value="3" checked><i class="form-icon"></i>3
-        </label>
-        <label class="form-radio form-inline">
-          <input type="radio" name="understand" value="4"><i class="form-icon"></i>4
-        </label>
-        <label class="form-radio form-inline">
-          <input type="radio" name="understand" value="5"><i class="form-icon"></i>5
-        </label>
-      </div>
+	<img src="lebron.png" alt="This is a picture of Lebron James" width="200" height="700">
 
-      <div class="column col-12">
-        <label class="form-label">How interesting did you find the lesson?</label>
-        <label class="form-radio form-inline">
-          <input type="radio" name="interest" value="1"><i class="form-icon"></i>1
-        </label>
-        <label class="form-radio form-inline">
-          <input type="radio" name="interest" value="2"><i class="form-icon"></i>2
-        </label>
-        <label class="form-radio form-inline">
-          <input type="radio" name="interest" value="3" checked><i class="form-icon"></i>3
-        </label>
-        <label class="form-radio form-inline">
-          <input type="radio" name="interest" value="4"><i class="form-icon"></i>4
-        </label>
-        <label class="form-radio form-inline">
-          <input type="radio" name="interest" value="5"><i class="form-icon"></i>5
-        </label>
-      </div>
-
-      <div class="column col-12">
-        <label class="form-label">Was the information organized and presented in a clear way?</label>
-        <label class="form-radio form-inline">
-          <input type="radio" name="organization" value="1"><i class="form-icon"></i>1
-        </label>
-        <label class="form-radio form-inline">
-          <input type="radio" name="organization" value="2"><i class="form-icon"></i>2
-        </label>
-        <label class="form-radio form-inline">
-          <input type="radio" name="organization" value="3" checked><i class="form-icon"></i>3
-        </label>
-        <label class="form-radio form-inline">
-          <input type="radio" name="organization" value="4"><i class="form-icon"></i>4
-        </label>
-        <label class="form-radio form-inline">
-          <input type="radio" name="organization" value="5"><i class="form-icon"></i>5
-        </label>
-      </div>
-
-      <div class="column col-12">
-        <label class="form-label">Quality of the PPT</label>
-        <label class="form-radio form-inline">
-          <input type="radio" name="pptQuality" value="1"><i class="form-icon"></i>1
-        </label>
-        <label class="form-radio form-inline">
-          <input type="radio" name="pptQuality" value="2"><i class="form-icon"></i>2
-        </label>
-        <label class="form-radio form-inline">
-          <input type="radio" name="pptQuality" value="3" checked><i class="form-icon"></i>3
-        </label>
-        <label class="form-radio form-inline">
-          <input type="radio" name="pptQuality" value="4"><i class="form-icon"></i>4
-        </label>
-        <label class="form-radio form-inline">
-          <input type="radio" name="pptQuality" value="5"><i class="form-icon"></i>5
-        </label>
-      </div>
-
-      <div class="column col-12">
-        <label class="form-label">Did I speak too fast?</label>
-        <label class="form-radio">
-          <input type="radio" name="speed" value="1"><i class="form-icon"></i>Yes
-        </label>
-        <label class="form-radio">
-          <input type="radio" name="speed" value="2" required><i class="form-icon"></i>No
-        </label>
-      </div>
-
-      <div class="column col-12">
-        <label class="form-label">Would you like me to continue teaching these kinds of lessons?</label>
-        <label class="form-radio">
-          <input type="radio" name="continue" value="1"><i class="contRadio form-icon"></i>Yes
-        </label>
-        <label class="form-radio">
-          <input type="radio" name="continue" value="2" required><i class="contRadio form-icon"></i>No
-        </label>
-      </div>
-
-      <div class="column col-12">
-        <label class="form-label" for="textAreaContent">Additional comments (<em>optional</em>)</label>
-        <textarea id="textAreaContent" class="form-input" rows="4" cols="50" name="comments"></textarea>
-      </div>
-
-      <div class="column col-12">
-        <input id="submitBTN" class="btn btn-lg" type="submit" value="Submit">
-      </div>
-
-    </form>
-    </div>
-    </div>
-
-    <footer></footer>
-
-
-
-    <script src="js/jquery.js"></script>
-    <script src="js/checker.js"></script>
-
-  </body>
+</body>
 </html>
