--- a/index.html
+++ b/index.html
@@ -18,15 +18,11 @@
 		<li>paper</li>
 	</ol>
 
-	<h2>My favorite foods</h2>
-	<dl>
-		<dt>apples</dt>
-		<dd>I like apples because they are sweet</dd>
-		<dt>bananas</dt>
-		<dd>they are easy to eat</dd>
-		<dt>chicken</dt>
-		<dd></dd>
-	</dl>
+	<a href="pages/favoriteFood.html"><h2>My favorite foods</h2></a>
+
+	<h2>Adjectives</h2>
+	<a href="feelings.html"><h3>Feelings</h3></a>
+	<a href=""><h3>Animals</h3></a>
 
 	<audio controls>
 		<source src="hi.mp3" type="audio/mpeg">
