--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>This is my website</title>
-	<link rel="stylesheet" href="william.css">
+	<link rel="stylesheet" href="index.css">
 </head>
 <body>
 
